--- a/pom.xml
+++ b/pom.xml
@@ -2,15 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <artifactId>spring-boot-starter-parent</artifactId>
     <groupId>org.springframework.boot</groupId>
-    <version>2.7.2</version>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>3.4.2</version>
     <relativePath></relativePath>
     <!-- lookup parent from repository -->
   </parent>
   <groupId>com.ikoyski</groupId>
   <artifactId>webtools-url-shortener</artifactId>
-  <version>0.0.2-SNAPSHOT</version>
+  <version>0.0.3-SNAPSHOT</version>
   <name>webtools-url-shortener</name>
   <description>webtools-url-shortener</description>
   <scm>
@@ -20,8 +20,25 @@
   </scm>
   <properties>
     <java.version>17</java.version>
+    <spring-cloud.version>2024.0.0</spring-cloud.version>
   </properties>
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-dependencies</artifactId>
+        <version>${spring-cloud.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
   <dependencies>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-actuator</artifactId>
@@ -62,7 +79,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
-        <version>2.5.3</version>
+        <version>3.1.1</version>
         <configuration>
           <goals>install</goals>
           <arguments>-Dmaven.javadoc.skip=true</arguments>
@@ -71,13 +88,17 @@
       <plugin>
         <groupId>pl.project13.maven</groupId>
         <artifactId>git-commit-id-plugin</artifactId>
+        <version>4.9.10</version>
+        <configuration>
+          <generateGitPropertiesFile>true</generateGitPropertiesFile>
+        </configuration>
         <executions>
           <execution>
             <id>get-the-git-infos</id>
-            <phase>initialize</phase>
             <goals>
               <goal>revision</goal>
             </goals>
+            <phase>initialize</phase>
             <configuration>
               <includeOnlyProperties>
                 <property>git.branch</property>
@@ -86,14 +107,11 @@
             </configuration>
           </execution>
         </executions>
-        <configuration>
-          <generateGitPropertiesFile>true</generateGitPropertiesFile>
-        </configuration>
       </plugin>
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.8.8</version>
+        <version>0.8.12</version>
         <executions>
           <execution>
             <goals>
@@ -103,23 +121,23 @@
           <!-- attached to Maven verify phase -->
           <execution>
             <id>report</id>
-            <phase>test</phase>
             <goals>
               <goal>report</goal>
             </goals>
+            <phase>test</phase>
           </execution>
         </executions>
       </plugin>
       <plugin>
         <groupId>com.github.ekryd.sortpom</groupId>
         <artifactId>sortpom-maven-plugin</artifactId>
-        <version>2.8.0</version>
+        <version>4.0.0</version>
         <executions>
           <execution>
-            <phase>verify</phase>
             <goals>
               <goal>sort</goal>
             </goals>
+            <phase>verify</phase>
           </execution>
         </executions>
       </plugin>
